@@ -1,7 +1,6 @@
 AUX disable-debootstrap-configure.ac.patch 873 RMD160 ba5566ebe8c86c4c87b88967dc44e9d9b754bbb9 SHA1 51d82b19fb93a18bd9e82e676d2a1bd0bcffc186 SHA256 1e6db347ebdce570af8108f07721676eeb7c18291a0fd23613ea7217baea4081
-DIST libguestfs-1.4.5.tar.gz 3549679 RMD160 93ecee5ef859209e57f61a2321c50eda8e93d648 SHA1 2b5d230aeadfff457657116017e98bc0e5d6cd71 SHA256 1f0a2bc7d81df014206846d58795103f381181b3e6456918d3ed71c3017b6046
-DIST libguestfs-1.5.13.tar.gz 4316250 RMD160 076c46e952ff5badff602af4b513a26b7d402d40 SHA1 a1aae368f332cb10a08619328f9d69bc203aa566 SHA256 fdee2eb007ef36d73016b025ee059ab721f63e06939d6294ff9e25fe2f3a6b25
-EBUILD libguestfs-1.4.5.ebuild 978 RMD160 105379a1a66d230ded880bf6a2a2869561c8716a SHA1 1c949f8999e86e333d97621a5a479c7ea9587eff SHA256 7f9a74176031588f98c1b6d5bba4f4ad723b9b40fa973ca6c1a9d7a4886cbd7c
-EBUILD libguestfs-1.5.13.ebuild 983 RMD160 460981b2c0cf70f112a1f89038b295a3fd6186bf SHA1 5592c07879b71de7777ebf58112404c7b3da273b SHA256 0650bb36a812b30169a4d9f8a2cd20251c2bd7474c8d6a8ada9991795735a05c
-MISC ChangeLog 924 RMD160 58dd2482d9d56f94ed6012601c0366613eefc663 SHA1 0aa1bc59f10cd377d7c6fa1380bbdd513f12208a SHA256 00dafe49587e5c5842942eabde6aee5f7bddc14702c3c17fb80503a1c8846877
+DIST libguestfs-1.5.19-x86_64.tar.gz 45678068 RMD160 92a36e43765b83827f8ec94ebe5bf87716df0af5 SHA1 7d1701bc4e180e97d01c309d1779d1328ae7f77d SHA256 6b650a33c469902a7742ef2d60d1a6b6ea5d399917c301a03ba39c449ad661f3
+DIST libguestfs-1.5.21.tar.gz 4343061 RMD160 3cd976d17fa2341a04127169b7df5397e84e4d0c SHA1 02415d22a5c94f854efc2af5d1d8ae61bfa5b153 SHA256 1480fb9aea72912250f9e44e05cd4c5d9bf29472e4ae30b716babd6e405a432c
+EBUILD libguestfs-1.5.21.ebuild 1194 RMD160 74758db7cb32ff67a6a71bf0911adbfc476f6b97 SHA1 f5b8b08e80dbb33b1b499ded1bd0a81eaa0eb945 SHA256 bee30bf15a15ae32ba85e39e1ba1b150546d42becce462f5aed21f78a8c8cbca
+MISC ChangeLog 1217 RMD160 71116e213b412b92dcb5407532058330e635a4e9 SHA1 72a27ae0bccb2aa97926d1ca8b3a20360f062a52 SHA256 65ffa8775b549381590964dbbcdc1e2edfd49b9c2386283d72fc993841ec8ca9
 MISC metadata.xml 512 RMD160 767663c67e02900d61c21b5e3efea479013de96b SHA1 1c340dba6130803cbab3af87f73be6e7b21f653c SHA256 a07814aa5f1dbca2201bac4592ba940e0fbf3ace8b3ab6376ebf9a484ab52c79
